refactor: when, then 구간 추가 기능 수정
- 구간별 동시 요청
- 총 합격, 불합격, 예비자 수 검증
- 구간별 예비번호 검증